--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   list-style: none;
 }
 
@@ -21,45 +20,31 @@ body, html {
 }
 
 header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
-  background: -webkit-gradient(linear, left top, right top, from(#0b1422), to(#2e3263));
   background: linear-gradient(90deg, #0b1422, #2e3263);
   padding: 1.5rem 2rem;
   border-bottom: 1px rgba(255, 255, 255, 0.3) solid;
 }
-
 header .logo {
   color: white;
   font-size: 1.2rem;
   font-weight: 900;
 }
-
 header .logo .brand {
   border-bottom: 3px solid #f50;
 }
-
 header .member {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 header .member input {
   border-radius: 3px;
   border: none;
   padding: 5px;
   margin: 0 2px;
 }
-
 header .member button {
   border: 1px solid white;
   height: 100%;
@@ -68,18 +53,15 @@ header .member button {
   margin: 0 2px;
   border-radius: 2px;
 }
-
 header .member .login {
   color: white;
   border: 1px solid white;
   background-color: #0b1422;
 }
-
 header .member .regis {
   border: transparent;
   background-color: #f50;
 }
-
 header .memberArea p {
   font-size: 0.5rem;
   color: white;
@@ -90,23 +72,17 @@ header .memberArea p {
 .menu {
   color: white;
   width: 100%;
-  background: -webkit-gradient(linear, left top, right top, from(#0b1422), to(#2e3263));
   background: linear-gradient(90deg, #0b1422, #2e3263);
   padding: 0.075rem 1rem;
   left: -100%;
-  -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
-
 .menu .wrapper ul {
   padding: 0rem 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   list-style: none;
   margin: 0;
 }
-
 .menu .wrapper ul li {
   cursor: pointer;
   padding: 0.5rem 0;
@@ -139,15 +115,13 @@ li.active {
   top: 15px;
   display: none;
 }
-
 #hamberger span {
   display: none;
   opacity: 0;
 }
-
 #hamberger::before {
   display: block;
-  content: '';
+  content: "";
   position: absolute;
   width: 80%;
   height: 2px;
@@ -156,8 +130,7 @@ li.active {
   bottom: 0;
   margin: auto;
   background-color: white;
-  -webkit-box-shadow: 0 10px 0 white, 0 -10px 0 white;
-          box-shadow: 0 10px 0 white, 0 -10px 0 white;
+  box-shadow: 0 10px 0 white, 0 -10px 0 white;
 }
 
 input:checked ~ .menu {
@@ -184,48 +157,26 @@ input:checked ~ .menu {
   height: 12vh;
   background-color: #e0e0e0;
 }
-
 .category ul {
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   list-style: none;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  flex-wrap: nowrap;
   overflow: auto;
 }
-
 .category ul li {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 50px;
-          flex: 1 0 50px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1 0 50px;
 }
-
 .category ul li .cate-Icon {
   font-size: 1.5rem;
   color: #818181;
 }
-
 .category ul li .cate-content {
   font-size: 0.5rem;
   font-weight: 800;
@@ -235,12 +186,9 @@ input:checked ~ .menu {
 
 .sideBar-btns {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 5px 10px;
 }
-
 .sideBar-btns .sideBar-regis, .sideBar-btns .sideBar-login {
   width: 50%;
   text-align: center;
@@ -249,37 +197,34 @@ input:checked ~ .menu {
   padding: 2px 0;
   border-radius: 2px;
 }
-
 .sideBar-btns .sideBar-regis {
   border: 1px solid white;
 }
-
 .sideBar-btns .sideBar-login {
   background-color: #f50;
 }
 
+main {
+  padding: 1rem 1rem;
+  background: #f1f3f7;
+}
 main .main-left {
   color: #0b1422;
 }
-
 main .main-left h5 {
   font-weight: 800;
   font-size: 13px;
 }
-
 main .main-left li {
   font-size: 10px;
   white-space: nowrap;
 }
-
 main .main-left .side-bar-top {
   height: 12%;
 }
-
 main .main-left .side-bar-top h5 {
   padding: 5px;
 }
-
 main .main-left .side-bar-top .favorite {
   margin-top: 12px;
   white-space: nowrap;
@@ -287,54 +232,51 @@ main .main-left .side-bar-top .favorite {
   font-size: 5px;
   border-radius: 3px;
   width: 95%;
-  -webkit-box-shadow: 0px 0px 10px #cacaca;
-          box-shadow: 0px 0px 10px #cacaca;
+  box-shadow: 0px 0px 10px #cacaca;
 }
-
 main .main-left .side-bar-middle .popular-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 main .main-left .side-bar-middle .popular-list :first-child {
   margin: 0 5px 0 0;
 }
-
 main .main-left .side-bar-middle .popular-list :nth-child(2) {
   margin-right: auto;
 }
-
 main .main-left .side-bar-middle h5 {
   padding: 10px 0px;
 }
-
 main .main-left .side-bar-middle li {
   padding: 10px 0px;
   color: #0b1422;
 }
-
 main .main-left .side-bar-bottom .az-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 main .main-left .side-bar-bottom .az-list :first-child {
   margin: 0 5px 0 0;
 }
-
 main .main-left .side-bar-bottom .az-list :nth-child(2) {
   margin-right: auto;
 }
-
 main .main-left .side-bar-bottom h5 {
   padding: 10px 0px;
 }
-
 main .main-left .side-bar-bottom li {
   padding: 10px 0px;
   color: #0b1422;
+}
+main .main-middle img {
+  width: 100%;
+}
+main .main-middle .gamgin-title {
+  color: black;
+}
+main .main-middle .gamgin-title div {
+  border: 1px solid black;
+}
+main .main-middle .place-area {
+  color: black;
 }
 
 @media screen and (max-width: 768px) {
@@ -343,32 +285,29 @@ main .main-left .side-bar-bottom li {
     width: 90vw;
     height: 100vh;
   }
+
   .menu .wrapper ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .menu .wrapper ul li {
     text-align: start;
   }
+
   .member input {
     display: none;
   }
+
   .memberArea p {
     display: none;
   }
+
   #hamberger {
     display: block;
   }
 }
-
 @media screen and (min-width: 768px) {
   .category {
     display: none;
   }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
