--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,7 +2,6 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
-
     list-style: none;
 }
 h1, h2, h3, h4, h5, h6 .h1, .h2, .h3, .h4, .h5, .h6{
@@ -16,12 +15,19 @@ hr{
 
 
 $mainColor: #0b1422;
+$lightBlue: #2e3263;
+
 $colorOrange: #f50;
+$colorGreen: #0fa810;
+$colorBlue: #2f7ff0;
+
+$lightGrey: #e4e4e4;
+$lighttWhite: #f1f2f3;
+
 
 body, html{
     width: 100%;
     height: 100%;
-    // background-color: grey;
 }
 
 header{
@@ -32,7 +38,6 @@ header{
 
     background: linear-gradient(90deg, $mainColor, #2e3263);
     padding: 1.5rem 2rem;
-
     border-bottom: 1px rgba(255, 255, 255, 0.3) solid;
 
     .logo{
@@ -133,7 +138,6 @@ li.active{
     display: inline-block;
     width: 1.5rem;
     height: 1.5rem;
-    // background: yellow;
     color: white;
     top: 15px;
     display: none;
@@ -243,6 +247,8 @@ input:checked ~ .menu{
 }
 
 main{
+    // max-width: 1280px;
+    display: flex;
     padding: 1rem 1rem;
     background: #f1f3f7;
 
@@ -319,23 +325,380 @@ main{
     }
 
     .main-middle{
+        border: 1px solid black;
         img{
             width: 100%;
+        };
+
+        .mobile-menu{
+            margin: 10px 0px;
+            width: 100%;
+            height: 30px;
+            background: white;
+            display: flex;
+
+            :first-child{
+                border-bottom: 2px solid $colorOrange
+            }
+            div{
+                width: 50%;
+                text-align: center;
+                line-height: 30px;
+                font-size: 15px;
+            }
+
         }
 
-        .gamgin-title{
-            color: black;
-            div{
+        .playing-games{
+
+            border: 1px solid rgb(199, 199, 199);
+            margin-top: 0.75rem;
+
+            .gaming-main-title{
                 border: 1px solid black;
+                color: white;
+                background-color: $mainColor;
+                line-height: 13px;
+                border-bottom: 3px solid $colorGreen;
+                
+                h6{
+                    font-size: 13px;
+                    padding: 0.25rem 1rem;
+                    margin:0;
+                }
+            }
+
+            .playing-menu{
+
+                display: flex;
+
+                .playing-category.category-active{
+                    ::after{
+                        content:'';
+                        position: absolute;
+
+                        width: 100%;
+                        height: 3px;
+                        background-color: #0fa810;
+                        left: 0;
+                        bottom: 0;
+
+                    }
+                }
+
+                .playing-category{
+                    position: relative;
+                    padding: 5px 10px;
+                    font-size:  10px;
+                    cursor: pointer;
+
+
+                    ::after{
+                        content:'';
+                        position: absolute;
+
+                        width: 100%;
+                        height: 3px;
+                        background-color: transparent;
+                        left: 0;
+                        bottom: 0;
+
+                        transition: all 0.1s;
+
+                    }
+
+                    :hover::after{
+                        background-color: #0fa810;
+                    }
+                }
+
+
+
+            }
+
+
+
+            .gamging-title{
+                display: flex;
+                text-align: center;
+                color: black;
+                padding: 5px;
+                background-color: rgb(231, 231, 231);
+                font-size: 13px;
+
+
+                :first-child{
+                    display:flex;
+                    justify-content: flex-start;
+                }
+                :nth-child(2){
+
+                    display:flex;
+                    justify-content: space-between;
+
+                    span{
+                        display: inline-block;
+                        width: 33%;
+                        text-align: center;
+                    }
+                }
+                :nth-child(3){
+                    // display:flex;
+                    text-align: center;
+                }
+                :nth-child(4){
+                    display:flex;
+                    justify-content: flex-start;
+
+                    :nth-child(2){
+                        margin-left: 30px;;
+                    }
+                }
+                
+            }
+    
+            .place-area{
+                color: black;
+                display: flex;
+                padding: 0.35rem 0.35rem;
+
+                .team-area{
+                    
+                    .team-1, .team-2{
+                        display: flex;
+                        justify-content: space-between;
+                        font-size: 12px;
+                        font-weight: 600;
+                    }
+
+                    .playing-time{
+                        font-size: 10px;
+                        font-weight: 800;
+                        color: $colorGreen;
+                    }
+
+                    .t1-score, .t2-score{
+                        color: $colorGreen;
+                    }
+                }
+
+                .odds-area{
+
+                    display: flex;
+                    justify-content: space-between;
+                    
+                    div{
+                        width: 32%;
+                    }
+
+                    button{
+                        padding:0.25rem;
+                        width: 100%;
+                        color: $colorBlue;
+                        font-size: 8px;
+                        font-weight: 600;
+                        height: 100%;
+                        border: 1px solid rgba(207, 207, 207, 0.7);
+                        border-radius: 3px;
+                        background: linear-gradient(180deg, rgba(255, 255, 255, 0.7),rgba(221, 220, 220, 0.7))
+                        
+                    }
+                }
+
+            
+                .cent-area{
+                    display: flex;
+                    align-items: center;
+
+                    :first-child{
+                        width: 50%;
+                        display: flex;
+                        flex-direction: column;
+                        text-align: center;
+                        
+
+                    }
+                    :nth-child(2){
+                        width: 50%;
+                        display: flex;
+                        flex-direction: column;
+                    }
+                    :nth-child(3){
+                        width: 10%;
+                    }
+                    img{
+                        width: 50px;
+                    };
+
+                    .cent-score{
+                        width: 100%;
+                        padding: 10px;
+                        color: $colorBlue;
+                        font-size: 8px;
+                        font-weight: 600;
+
+                        span{
+                            width: 100%;
+                        }
+                    }
+
+                }
+
+                .big-small-area{
+                    display: flex;
+                    align-items: center;
+                    font-weight: 700;
+                    color: $colorBlue;
+                    font-size: 8px;;
+
+                    :first-child{
+                        width:33%;
+                        display:flex;
+                        flex-direction: column;
+                    }
+                    :nth-child(2){
+                        width:33%;
+                        display:flex;
+                        flex-direction: column;
+                    }
+                    :nth-child(3){
+                        width: 5%;
+                        display:flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        img{
+                            width: 100%;
+                        }
+                    }
+                    :nth-child(4){
+                        display:flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        width:30%;
+                        color: black
+
+                    }
+                }
+
+
+            }
+        };
+
+
+
+    }
+
+    .main-right{
+
+        // AsiaWebsite Img
+        .img-container{
+            width: 100%;
+            position:sticky;
+            top: 80%;
+            img{
+                max-width: 100%;;
             }
         }
 
-        .place-area{
-            color: black;
+        .wrapper-order{
+            height: 50vh;
+            border-radius: 3px;
+            position:sticky;
+            top: 50px;
+
+            .order-header{
+                padding: 0.5rem;
+                background-color: #2e3263;
+                color: white;
+                h6{
+                    margin:0;
+                }
+            }
+
+            .order-nav{
+            
+                ul{
+                    display: flex;
+                    margin:0;
+                    border-bottom: 2px solid rgb(177, 177, 177);
+                    :first-child{
+                        border-bottom: 3px solid $colorOrange
+                    }
+
+                    li{
+                        flex: 1;
+                        font-size: 12px;
+                        background-color: white;
+                        color: $mainColor;
+                        text-align: center;
+                        padding: 0.5rem;
+                    }
+                }
+            }
+
+            .order-content{
+
+                background-color: $lightGrey;
+
+                .orders{
+                    padding: 20px 0 ;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+
+                    .each-order{
+                        margin: 2px 0px;
+                        border-radius: 5px;
+                        width: 100px;
+                        height: 50px;
+                        background-color: $lighttWhite
+                
+                    }
+                }
+
+
+                .warning-text{
+                    margin: 2rem 0 ;
+
+                    p{
+                        margin:0;
+                        padding:0;
+                        text-align: center;
+                        font-size: 12px;
+                    }
+                    :first-child{
+                        font-size: 15px;
+                        font-weight: bolder
+                    }
+                }
+
+                .order-footer{
+                    border: 1px solid black;
+                    background-color: $lightBlue;
+
+                    .total-bet, .total-win{
+                        display: flex;
+                        justify-content: space-between;
+                        padding: 0.5rem;
+                        font-size: 12px;
+                        color:$lighttWhite
+                    }
+
+                    .order-button{
+                        margin: 0.5rem auto;
+                        padding: 0.25rem 1rem;
+                        border-radius: 3px;
+                        color: rgb(238, 238, 238);
+                        font-size: 12px;
+                        width: 80%;
+                        background-color: $colorOrange;
+                        text-align: center;
+                    }
+                }
+
+            }
         }
-
-
-
     }
  
 
@@ -346,6 +709,7 @@ main{
         position: absolute;
         width: 90vw;
         height: 100vh;
+        z-index: 100;
     }
 
     .menu .wrapper ul{
