--- a/styles/style.scss
+++ b/styles/style.scss
@@ -28,6 +28,7 @@ $lighttWhite: #f1f2f3;
 body, html{
     width: 100%;
     height: 100%;
+    min-height: -webkit-fill-available;
 }
 
 header{
@@ -474,13 +475,13 @@ main{
                     .team-1, .team-2{
                         display: flex;
                         justify-content: space-between;
-                        font-size: 12px;
-                        font-weight: 600;
+                        font-size: 10px;
+                        font-weight: 500;
                     }
 
                     .playing-time{
-                        font-size: 10px;
-                        font-weight: 800;
+                        font-size: 5px;
+                        font-weight: 600;
                         color: $colorGreen;
                     }
 
@@ -502,8 +503,8 @@ main{
                         padding:0.25rem;
                         width: 100%;
                         color: $colorBlue;
-                        font-size: 8px;
-                        font-weight: 600;
+                        font-size: 3px;
+                        font-weight: 400;
                         height: 100%;
                         border: 1px solid rgba(207, 207, 207, 0.7);
                         border-radius: 3px;
@@ -531,8 +532,8 @@ main{
                         padding:0.25rem;
                         width: 100%;
                         color: $colorBlue;
-                        font-size: 8px;
-                        font-weight: 600;
+                        font-size: 3px;
+                        font-weight: 400;
                         height: 100%;
                         border: 1px solid rgba(207, 207, 207, 0.7);
                         border-radius: 3px;
@@ -572,23 +573,24 @@ main{
                 .big-small-area{
                     display: flex;
                     align-items: center;
-                    justify-content: space-between;
-                    font-weight: 700;
+                    justify-content: space-around;
                     color: $colorBlue;
-                    font-size: 8px;
+                    font-size: 3px;
+                    font-weight: 400;
 
                     .handicap {
                         display:flex;
                         flex-direction: column;
-                        width: 30%;
+                        width: 40%;
                         height: 100%;
+                        margin: 0 5px;
 
                     .handicap-button{
                         padding:0.25rem;
                         width: 100%;
                         color: $colorBlue;
-                        font-size: 8px;
-                        font-weight: 600;
+                        font-size: 3px;
+                        font-weight: 400;
                         height: 100%;
                         border: 1px solid rgba(207, 207, 207, 0.7);
                         border-radius: 3px;
@@ -604,11 +606,12 @@ main{
                     }
 
                     .arrow-container{
-                        width: 10%;
+                        // width: 5%;
                         height: 100%;
                         display:flex;
                         flex-direction: column;
                         justify-content: center;
+                        // background-color: transparent;
 
                         .arrow-text{
                             cursor: pointer;
@@ -626,6 +629,12 @@ main{
                             
                         }
                     }
+
+                    // .bigsmall-time{
+                    //     position:absolute;
+                    //     right: -10px;
+                    //     font-size: 8px;
+                    // }
 
                 }
 
@@ -779,6 +788,7 @@ main{
     .link-Category{
 
        flex: 1 1 150px;
+       padding: 0 15px;
 
        :first-child{
            font-size: 13px;
@@ -868,6 +878,15 @@ main{
 
     .mobile-none{
         display: none !important;
+    }
+
+    // 小尺寸把padding還回
+    main{
+        padding:0;
+
+        .main-middle{
+            padding:0;
+        }
     }
 
   }
